# 2019concurrentes

./: .gitignore  Cargo.toml  Dockerfile  README  balancer.hpp  config  distributor.hpp  docker.sh  flower.hpp  inventory.hpp  launcher.hpp  log.hpp  log.txt  main  main.cc  main.cpp  main2.cpp  pipe.hpp  producer.hpp  queue.hpp  result.txt  runme.sh  sellpoint.hpp  shm.hpp  storage.hpp  tp1
request/: sellpoint1  sellpoint2  sellpoint3
src/: lead.rs  logger.rs  main.rs  messages.rs  miner.rs  utils.rs
